--- a/app/views/ui/index.html.erb
+++ b/app/views/ui/index.html.erb
@@ -1,2 +1,2 @@
-
-<%= react_component("App", trace: true, props: { currentUser: current_user }) %>
+<h1>Note IT</h1>
+<%= react_component("App",  trace: true) %>
